# invoicer

./: .env.example  .gitignore  CLIENT_MANAGEMENT.md  CLI_USAGE.md  DIRECTORY_STRUCTURE.md  Makefile  README.md  SECURITY_AUDIT.md  config.py  demo.py  email_sender.py  generate_samples.py  invoice_generator.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_pdf.py
src/invoicer/: cli.py  client_cli.py  client_manager.py  client_utils.py  config.py  config_cli.py  demo.py  email_sender.py  field_types.py  generate_samples.py  invoice_generator.py  main.py  models.py  utils.py  validators.py
src/invoicer/cli/: __init__.py  __main__.py  client.py  config.py  main.py
tests/: conftest.py  test_client_cli.py  test_client_manager.py  test_client_utils.py  test_config.py  test_config_cli.py  test_integration.py  test_invoice_duplicate_checking.py  test_invoice_generator.py  test_json_invoice_saving.py  test_main.py  test_models.py  test_pdf.py
