[project]
name = "invoicer"
version = "0.1.0"
description = "PDF Invoice Generator with Email Integration"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "msal>=1.24.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest[dev]>=8.4.2",
]

[project.scripts]
invoicer = "invoicer.cli:app"

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
# Platform-specific metadata


# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
